--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "react-native-training",
     "slug": "react-native-training",
+    "scheme": "react-native-training",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
